--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,6 +1,10 @@
 name: Check
 on:
-  push
+  push:
+    branches:
+      - '**'
+    tags:
+      - [0-9].[0-9]+.[0-9]+
 jobs:
   scalafmt:
     runs-on: ubuntu-latest
@@ -14,6 +18,8 @@ jobs:
 
   native-image:
     runs-on: macos-latest
+    needs:
+      - scalafmt
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -22,7 +28,26 @@ jobs:
       - name: Build native image
         run: sbt nativeImage
       - name: Upload native image
+        if: github.ref_type == "tag"
         uses: actions/upload-artifact@v3
         with:
           name: macos-intel
           path: target/native-image/line-notify
+
+  create-release:
+    runs-on: ubuntu-latest
+    needs:
+      - native-image
+    if: github.ref_type == "tag"
+    steps:
+      - name: Download native image
+        uses: actions/download-artifact@v3
+        with:
+          name: macos-intel
+      - name: Create Release
+        uses: marvinpinto/action-automatic-releases@latest
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+          files: |
+            line-notify
