--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - '**'
     tags:
-      - [0-9].[0-9]+.[0-9]+
+      - '[0-9]+.[0-9]+.[0-9]+'
 jobs:
   scalafmt:
     runs-on: ubuntu-latest
@@ -28,7 +28,7 @@ jobs:
       - name: Build native image
         run: sbt nativeImage
       - name: Upload native image
-        if: github.ref_type == "tag"
+        if: "${{ github.ref_type == 'tag' }}"
         uses: actions/upload-artifact@v3
         with:
           name: macos-intel
@@ -38,7 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - native-image
-    if: github.ref_type == "tag"
+    if: "${{ github.ref_type == 'tag' }}"
     steps:
       - name: Download native image
         uses: actions/download-artifact@v3
