--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -30,14 +30,12 @@ jobs:
       - name: Archive artifacts
         if: "${{ github.ref_type == 'tag' }}"
         working-directory: target/native-image
-        run: |
-          chmod +x line-notify
-          tar -cvzf line-notify.tar.gz line-notify
+        run: zip line-notify.zip line-notify
       - name: Upload native image
         uses: actions/upload-artifact@v3
         with:
           name: macos-intel
-          path: target/native-image/line-notify.tar.gz
+          path: target/native-image/line-notify.zip
       - name: Upload native image (debug)
         uses: actions/upload-artifact@v3
         with:
@@ -60,7 +58,7 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
           files: |
-            line-notify.tar.gz
+            line-notify.zip
 
   create-formula:
     runs-on: ubuntu-latest
@@ -74,7 +72,7 @@ jobs:
         with:
           name: macos-intel
       - name: Calc SHA-256
-        run: echo "sha256_macos_intel=$(sha256sum line-notify.tar.gz | cut -f 1 -d ' ')" >> $GITHUB_ENV
+        run: echo "sha256_macos_intel=$(sha256sum line-notify.zip | cut -f 1 -d ' ')" >> $GITHUB_ENV
       - name: Update formula
         uses: danielr1996/envsubst-action@1.1.0
         env:
